# VideoEncrypt

./: .gitignore  Cargo.toml  README.md  README_zh.md
.github/workflows/: build.yml
doc/: 00_Architecture_Context.md  01_Shared_Domain.md  02_Parser_Spec.md  03_IO_Journaling_Spec.md  04_Crypto_Engine_Spec.md  05_CLI_Orchestrator_Spec.md  05_Core_Workflow_Spec.md  06_CLI_Adapter_Spec.md  07_QA_and_Testing_Spec.md
gui/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
gui/src/: App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  progress.rs  task_manager.rs
gui/src/components/: FileList.tsx  LanguageSwitcher.tsx  ProgressPanel.tsx  TaskConfigPanel.tsx  ThemeProvider.tsx  ThemeSwitcher.tsx  Toast.tsx  index.ts
gui/src/components/ui/: table.tsx
gui/src/hooks/: useDragDrop.ts  useTaskProgress.ts
gui/src/lib/: i18n.ts  tauri.ts  utils.ts
gui/src/stores/: appStore.ts  i18nStore.ts
gui/src/types/: index.ts
src/: common.rs  error.rs  i18n.rs  lib.rs  workflow.rs
src/crypto/: engine.rs  key_deriv.rs  mod.rs
src/io/: locker.rs  mod.rs  wal.rs
src/parsers/: mkv.rs  mod.rs  mp4.rs
tests/: lib_integration_test.rs
