[workspace]
resolver = "2"
members = [".", "gui/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VideoEncrypt Team"]
license = "MIT"
repository = "https://github.com/your-org/media-lock"

[package]
name = "media-lock"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "In-place, high-performance, crash-safe media file encryption system"
license.workspace = true

[lib]
name = "media_lock_core"
path = "src/lib.rs"

[[bin]]
name = "media-lock-cli"
path = "src/bin/main.rs"

[features]
default = ["en"]
en = []
zh = []
gui-support = []

[dependencies]
memmap2 = "0.9"
byteorder = "1.5"
aes = "0.8"
ctr = "0.9"
argon2 = "0.5"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rpassword = "7.3"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
crc32fast = "1.3"
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.10"
